--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -39,8 +39,8 @@
 ----------------------------------------------------------------*/
 body,
 html {
-  color: #a9adb8;
-  background-color: #0a101e;
+  color: #858585;
+  background-color: #151515;
   font-family: 'Inter', sans-serif;
   font-size: 16px;
   font-weight: 400;
@@ -438,7 +438,7 @@ a:hover {
   overflow: hidden; }
 
 .st-dark-bg {
-  background-color: #070d1b; }
+  background-color: #020202; }
 
 .st-gray-bg {
   background-color: #b8b8b8; }
@@ -494,14 +494,14 @@ hr {
             justify-content: space-between;
     height: 80px; }
   .st-site-header.st-style1.st-sticky-active {
-    background-color: #070d1b; }
+    background-color: #020202; }
 
 @media screen and (max-width: 991px) {
   .st-main-header .container {
     max-width: 100%; }
 
   .st-site-header.st-style1 {
-    background-color: #070d1b; } }
+    background-color: #020202; } }
 .st-nav ul {
   margin: 0;
   padding: 0;
@@ -534,7 +534,7 @@ hr {
           font-family: 'Roboto', sans-serif;
           font-weight: 500; }
           .st-nav .st-nav-list > li > a.active {
-            color: #fec544; }
+            color: #ff5e00; }
     .st-nav .sp-phone {
       display: -webkit-box;
       display: -ms-flexbox;
@@ -556,7 +556,7 @@ hr {
         width: 15px; }
       .st-nav .sp-phone .sp-phone-no {
         padding-left: 15px;
-        color: #fec544; }
+        color: #ff5e00; }
 
   .st-munu-toggle,
   .st-munu-dropdown-toggle {
@@ -592,12 +592,12 @@ hr {
     position: absolute;
     width: 100vw;
     left: 0;
-    background-color: #070d1b;
+    background-color: #020202;
     padding: 10px 0;
     display: none;
     top: 100%;
-    border-top: 1px solid #101624;
-    border-bottom: 1px solid #101624;
+    border-top: 1px solid #151515;
+    border-bottom: 1px solid #151515;
     overflow: auto;
     max-height: calc(100vh - 80px); }
     .st-nav .st-nav-list ul {
@@ -698,9 +698,9 @@ hr {
 @media screen and (min-width: 991px) {
   .st-site-header.st-style2 {
     width: 300px;
-    background: #070d1b;
+    background: #020202;
     height: 100vh;
-    border-right: 1px solid #101624;
+    border-right: 1px solid #151515;
     overflow: auto; }
     .st-site-header.st-style2 .st-nav {
       -webkit-box-orient: vertical;
@@ -726,19 +726,19 @@ hr {
         width: 299px;
         left: 0;
         bottom: 0;
-        background-color: #070d1b; }
+        background-color: #020202; }
     .st-site-header.st-style2 .st-social-btn.st-style1 {
       position: fixed;
       bottom: 40px;
       left: 40px; }
       .st-site-header.st-style2 .st-social-btn.st-style1 li {
-        color: #0a101e;
+        color: #151515;
         margin-right: 20px;
         font-size: 18px; }
         .st-site-header.st-style2 .st-social-btn.st-style1 li:last-child {
           margin-right: 0; }
         .st-site-header.st-style2 .st-social-btn.st-style1 li a:hover {
-          color: #070d1b; }
+          color: #020202; }
     .st-site-header.st-style2 .st-main-header-left {
       margin-bottom: 24px; }
     .st-site-header.st-style2 .st-btn.st-style1 {
@@ -750,7 +750,7 @@ hr {
     .st-site-header.st-style2 .st-main-header-left {
       margin-left: -40px;
       margin-right: -40px;
-      border-bottom: 1px solid #101624;
+      border-bottom: 1px solid #151515;
       padding-bottom: 40px; }
 
   .st-get-sidebar {
@@ -765,8 +765,8 @@ hr {
     display: none !important; }
 
   .st-site-header.st-style2 {
-    background-color: #070d1b;
-    border-bottom: 1px solid #101624; }
+    background-color: #020202;
+    border-bottom: 1px solid #151515; }
     .st-site-header.st-style2 .st-nav {
       display: -webkit-box;
       display: -ms-flexbox;
@@ -794,7 +794,7 @@ hr {
 .st-hero-wrap {
   position: relative;
   height: 850px;
-  background-color: #070d1b; }
+  background-color: #020202; }
   .st-hero-wrap img {
     height: 100%;
     width: 100%;
@@ -834,17 +834,17 @@ hr {
     font-size: 36px;
     margin-bottom: 41px;
     font-weight: 300;
-    color: #a9adb8; }
+    color: #858585; }
   .st-hero.st-style1 .st-hero-text h3 {
     font-size: 30px;
     margin-top: -6px;
     margin-bottom: 10px;
     font-weight: 300;
-    color: #fec544; }
+    color: #ff5e00; }
 
 .st-social-group {
-  background-color: #101624;
-  border: 1px solid #232935;
+  background-color: #151515;
+  border: 1px solid #858585;
   border-right: 0;
   border-radius: 50px 0 0 50px;
   height: 80px;
@@ -874,7 +874,7 @@ hr {
   text-align: center;
   position: relative;
   overflow: hidden;
-  background-color: #070d1b; }
+  background-color: #020202; }
   .st-hero.st-style2 .container {
     position: relative;
     z-index: 11; }
@@ -883,7 +883,7 @@ hr {
     font-weight: 600;
     margin-bottom: 20px; }
     .st-hero.st-style2 h1 span {
-      color: #fec544; }
+      color: #ff5e00; }
   .st-hero.st-style2 p {
     font-size: 18px;
     font-weight: 300;
@@ -1124,8 +1124,8 @@ canvas {
           box-shadow: 0px 5px 10px 0px #fec64450; }
 
 .st-btn.st-style1.st-color1 {
-  background-color: #fec544;
-  color: #070d1b; }
+  background-color: #ff5e00;
+  color: #020202; }
 
 .st-btn.st-style1.st-color2 {
   background: #000;
@@ -1145,12 +1145,12 @@ canvas {
 
 .st-btn.st-style2.st-color1 {
   background-color: transparent;
-  border-color: #fec544;
-  color: #fec544; }
+  border-color: #ff5e00;
+  color: #ff5e00; }
 
 .st-btn.st-style2.st-color1:hover {
-  background-color: #fec544;
-  color: #070d1b; }
+  background-color: #ff5e00;
+  color: #020202; }
 
 .st-btn.st-size-medium {
   padding: 0.6em 1.8em; }
@@ -1182,7 +1182,7 @@ canvas {
     font-size: 24px;
     font-weight: 500;
     text-transform: uppercase;
-    color: #fec544;
+    color: #ff5e00;
     position: relative;
     z-index: 10;
     letter-spacing: 1px; }
@@ -1199,7 +1199,7 @@ canvas {
     .st-section-heading.st-style1 .st-section-heading-title::after {
       content: "";
       position: absolute;
-      background-color: #fec544;
+      background-color: #ff5e00;
       width: 70px;
       height: 2px;
       bottom: -16px;
@@ -1240,7 +1240,7 @@ canvas {
 .st-text-block.st-style1 .st-text-block-subtitle {
   font-size: 24px;
   font-weight: 300;
-  color: #fec544;
+  color: #ff5e00;
   margin-bottom: 18px; }
 .st-text-block.st-style1 .st-text-block-text p {
   margin-bottom: 18px; }
@@ -1270,14 +1270,14 @@ canvas {
   border-radius: 3px;
   -webkit-transition: all 0.4s ease;
   transition: all 0.4s ease;
-  border: 1px solid #232935;
-  background-color: #101624; }
+  border: 1px solid #858585;
+  background-color: #151515; }
   .st-iconbox.st-style1:hover .st-iconbox-icon {
-    border: 0.5px solid #fec544; }
+    border: 0.5px solid #ff5e00; }
     .st-iconbox.st-style1:hover .st-iconbox-icon svg {
-      fill: #fec544; }
+      fill: #ff5e00; }
   .st-iconbox.st-style1:hover .st-iconbox-title {
-    color: #fec544; }
+    color: #ff5e00; }
   .st-iconbox.st-style1 .st-iconbox-icon {
     display: -webkit-box;
     display: -ms-flexbox;
@@ -1292,7 +1292,7 @@ canvas {
     width: 90px;
     border: 0.5px solid #3f4551;
     border-radius: 50%;
-    background-color: #070d1b;
+    background-color: #020202;
     margin: auto;
     font-size: 50px;
     margin-bottom: 28px;
@@ -1347,7 +1347,7 @@ canvas {
   margin-bottom: 0; }
 
 .st-progressbar-percentage {
-  color: #fec544;
+  color: #ff5e00;
   font-weight: 400; }
 
 .st-progressbar {
@@ -1356,7 +1356,7 @@ canvas {
   background-color: #3f4551; }
 
 .st-progressbar-in {
-  background-color: #fec544;
+  background-color: #ff5e00;
   height: 2px; }
 
 @media screen and (max-width: 991px) {
@@ -1385,9 +1385,9 @@ canvas {
   .st-resume-timeline::before {
     position: absolute;
     content: "";
-    border: 2px solid #232935;
+    border: 2px solid #858585;
     border-radius: 50%;
-    background-color: #101624;
+    background-color: #151515;
     width: 13px;
     height: 13px;
     top: 0px;
@@ -1395,11 +1395,11 @@ canvas {
     -webkit-transition: all 0.4s ease;
     transition: all 0.4s ease; }
   .st-resume-timeline:hover::before {
-    background-color: #fec544; }
+    background-color: #ff5e00; }
   .st-resume-timeline .st-resume-timeline-title {
     font-size: 24px;
     font-weight: 400;
-    color: #fec544;
+    color: #ff5e00;
     margin-top: -7px;
     margin-bottom: 8px; }
   .st-resume-timeline .st-resume-timeline-duration {
@@ -1416,7 +1416,7 @@ canvas {
 .st-resume-timeline-wrap {
   padding-left: 40px;
   margin-left: 20px;
-  border-left: 1px solid #232935; }
+  border-left: 1px solid #858585; }
 
 /*--------------------------------------------------------------
 1. Portfolio
@@ -1485,7 +1485,7 @@ canvas {
     -webkit-box-align: center;
         -ms-flex-align: center;
             align-items: center;
-    background: #fec544;
+    background: #ff5e00;
     color: #151b29;
     font-size: 26px;
     opacity: .8; }
@@ -1666,19 +1666,19 @@ canvas {
 24. Testimonial
 ----------------------------------------------------------------*/
 .st-testimonial.st-style1:hover .st-testimonial-name {
-  color: #fec544; }
+  color: #ff5e00; }
 .st-testimonial.st-style1:hover .st-testimonial-text {
-  border-color: #fec544; }
+  border-color: #ff5e00; }
   .st-testimonial.st-style1:hover .st-testimonial-text::after {
-    border-color: #fec544; }
+    border-color: #ff5e00; }
 .st-testimonial.st-style1 .st-testimonial-text {
   position: relative;
   border-radius: 3px;
   -webkit-transition: all 0.4s ease;
   transition: all 0.4s ease;
-  background-color: #101624;
+  background-color: #151515;
   padding: 30px 15px;
-  border: 1px solid #232935;
+  border: 1px solid #858585;
   margin-bottom: 40px; }
   .st-testimonial.st-style1 .st-testimonial-text::after {
     content: "";
@@ -1687,9 +1687,9 @@ canvas {
     height: 30px;
     left: 50%;
     bottom: -16px;
-    border: 1px solid #232935;
+    border: 1px solid #858585;
     border-width: 0 1px 1px 0;
-    background: #101624;
+    background: #151515;
     -webkit-transform: translateX(-50%) rotate(45deg);
             transform: translateX(-50%) rotate(45deg);
     -webkit-transition: all 0.4s ease;
@@ -1750,7 +1750,7 @@ canvas {
     margin-right: 4px; }
   .st-post-single.st-style1 .st-post-date .st-post-author,
   .st-post-single.st-style1 .st-post-date .st-post-publish-date {
-    color: #fec544; }
+    color: #ff5e00; }
   .st-post-single.st-style1 .st-post-date .st-post-author:hover {
     opacity: 0.8; }
 .st-post-single.st-style1 .st-post-title {
@@ -1759,7 +1759,7 @@ canvas {
   line-height: 1.2em;
   margin-bottom: 0; }
   .st-post-single.st-style1 .st-post-title:hover {
-    color: #fec544; }
+    color: #ff5e00; }
 
 /*--------------------------------------------------------------
 27. Blog Details
@@ -1826,7 +1826,7 @@ canvas {
   height: 320px; }
 
 .st-widget {
-  border: 1px solid #232935;
+  border: 1px solid #858585;
   border-radius: 7px;
   padding: 30px; }
   .st-widget .st-widget-title {
@@ -1842,7 +1842,7 @@ canvas {
       padding-right: 15px; }
       .st-widget .st-widget-title span:before {
         content: '';
-        background-color: #232935;
+        background-color: #858585;
         position: absolute;
         left: 100%;
         bottom: 50%;
@@ -1857,12 +1857,12 @@ canvas {
   margin-bottom: -16px;
   font-size: 14px; }
   .st-widget-list li:not(:last-child) {
-    border-bottom: 1px solid #232935; }
+    border-bottom: 1px solid #858585; }
   .st-widget-list a {
     display: block;
     padding: 10px 0; }
     .st-widget-list a:hover {
-      color: #fec544; }
+      color: #ff5e00; }
 
 .st-tagcloud {
   margin-bottom: -10px; }
@@ -1870,14 +1870,14 @@ canvas {
     display: inline-block;
     font-size: 13px;
     padding: 2px 10px;
-    border: 1px solid #232935;
+    border: 1px solid #858585;
     border-radius: 7px;
     margin-right: 6px;
     margin-bottom: 10px; }
     .st-tagcloud .st-tag:hover {
       color: #fff;
-      background-color: #fec544;
-      border-color: #fec544; }
+      background-color: #ff5e00;
+      border-color: #ff5e00; }
 
 .st-sidebar-social-btn {
   display: -webkit-box;
@@ -1912,8 +1912,8 @@ canvas {
     padding: 30px 40px 27px;
     font-size: 24px;
     line-height: 1.6em;
-    border-left: 5px solid #fec544;
-    color: #fec544;
+    border-left: 5px solid #ff5e00;
+    color: #ff5e00;
     border-radius: 7px;
     font-weight: 400;
     margin: 20px 0; }
@@ -1921,11 +1921,11 @@ canvas {
       display: block;
       line-height: inherit;
       margin-top: 4px;
-      color: #a9adb8;
+      color: #858585;
       font-size: inherit;
       font-size: 16px; }
       .st-post-details.st-style1 blockquote small span {
-        color: #fec544; }
+        color: #ff5e00; }
   .st-post-details.st-style1 .st-post-label {
     margin-bottom: 15px; }
   .st-post-details.st-style1 .st-post-text p {
@@ -1940,8 +1940,8 @@ canvas {
     padding: 25px 0;
     line-height: 1.6em;
     font-size: 15px;
-    border-top: 1px solid #232935;
-    border-bottom: 1px solid #232935; }
+    border-top: 1px solid #858585;
+    border-bottom: 1px solid #858585; }
   .st-post-details.st-style1 h2 {
     font-size: 28px;
     margin-bottom: 10px; }
@@ -1966,11 +1966,11 @@ canvas {
       position: absolute;
       height: 16px;
       width: 1px;
-      background-color: #232935;
+      background-color: #858585;
       right: 0;
       top: 3px; }
 .st-post-label a:hover {
-  color: #fec544; }
+  color: #ff5e00; }
 
 .st-post-tage-list {
   display: -webkit-box;
@@ -1985,7 +1985,7 @@ canvas {
     .st-post-tage-list li:not(:last-child):after {
       content: ','; }
     .st-post-tage-list li a:hover {
-      color: #fec544; }
+      color: #ff5e00; }
 
 .st-post-tages,
 .st-post-share {
@@ -2012,7 +2012,7 @@ canvas {
   .st-post-share-btn-list a:not(:last-child) {
     margin-right: 12px; }
   .st-post-share-btn-list a:hover {
-    color: #fec544; }
+    color: #ff5e00; }
 
 .st-post-btn-gropu {
   display: -webkit-box;
@@ -2095,7 +2095,7 @@ canvas {
 
 .comments-area {
   padding-top: 56px;
-  border-top: 1px solid #232935; }
+  border-top: 1px solid #858585; }
 
 .comment-body {
   position: relative;
@@ -2124,7 +2124,7 @@ canvas {
 .comment-author .nm,
 .comment-author .nm a {
   font-weight: 500;
-  color: #fec544;
+  color: #ff5e00;
   font-size: 14px;
   display: block; }
 
@@ -2134,7 +2134,7 @@ canvas {
 .comment-author .nm a:hover,
 .comment-author .nm:hover,
 .comment-metadata a:hover {
-  color: #fec544; }
+  color: #ff5e00; }
 
 .comment-metadata a {
   color: #fdfeff;
@@ -2153,7 +2153,7 @@ canvas {
 
 .comment-reply-link {
   font-size: 14px;
-  color: #fec544;
+  color: #ff5e00;
   position: relative; }
 
 .comment-reply-link:hover,
@@ -2177,7 +2177,7 @@ canvas {
   margin-top: 56px;
   padding-bottom: 0px;
   margin-bottom: 0px;
-  border-top: 1px solid #232935;
+  border-top: 1px solid #858585;
   padding-top: 57px; }
 
 .comment-form {
@@ -2212,7 +2212,7 @@ canvas {
 
 .comment-form textarea,
 .comment-form input {
-  border: 1px solid #232935;
+  border: 1px solid #858585;
   padding: 8px 15px;
   width: 100%;
   background-color: transparent;
@@ -2225,7 +2225,7 @@ canvas {
   .comment-form textarea:focus,
   .comment-form input:focus {
     outline: none;
-    border-color: #fec544; }
+    border-color: #ff5e00; }
 
 .post-navigation {
   display: -webkit-box;
@@ -2279,10 +2279,10 @@ canvas {
 .st-form-field textarea {
   display: block;
   width: 100%;
-  color: #a9adb8;
+  color: #858585;
   padding: 12px 20px;
-  border: 1px solid #232935;
-  background-color: #101624;
+  border: 1px solid #858585;
+  background-color: #151515;
   height: 52px;
   border-radius: 7px;
   -webkit-transition: all .4s ease;
@@ -2301,7 +2301,7 @@ canvas {
     color: #3f4551; }
   .st-form-field input:focus,
   .st-form-field textarea:focus {
-    border-color: #fec544;
+    border-color: #ff5e00;
     outline: 0; }
 
 .st-form-field textarea {
@@ -2320,7 +2320,7 @@ canvas {
           align-items: flex-start;
   margin-bottom: 30px; }
   .st-single-contact-info:hover i {
-    border-color: #fec544; }
+    border-color: #ff5e00; }
   .st-single-contact-info i {
     display: -webkit-box;
     display: -ms-flexbox;
@@ -2333,7 +2333,7 @@ canvas {
             align-items: center;
     border: 0.5px solid #3f4551;
     border-radius: 50%;
-    background-color: #070d1b;
+    background-color: #020202;
     width: 50px;
     height: 50px;
     margin-right: 20px;
@@ -2350,7 +2350,7 @@ canvas {
   display: block;
   margin-bottom: -2px; }
   .st-single-info-details a:hover {
-    color: #fec544; }
+    color: #ff5e00; }
   .st-single-info-details a:last-child {
     margin-bottom: -6px; }
 
@@ -2372,7 +2372,7 @@ canvas {
 
 .st-social-link .st-social-btn {
   border-radius: 50px;
-  background-color: #070d1b;
+  background-color: #020202;
   border: 0.5px solid #3f4551;
   -webkit-transition: all 0.4s ease;
   transition: all 0.4s ease;
