added bootstrap min js and popup woking now

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3,9 +3,30 @@
  Author: Laralink
  Version: 1.0.0
  */
-/*Google Fonts*/
-@import url("https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap");
-@import url("https://fonts.googleapis.com/css2?family=Open+Sans&display=swap");
+
+@font-face
+{
+    font-family: 'Evolventa';
+    font-weight: normal;
+    font-style: normal;
+    src: url('../fonts/Evolventa-Regular.ttf');
+}
+
+@font-face
+{
+    font-family: 'Evolventa';
+    font-weight: bold;
+    font-style: bold;
+    src: url('../fonts/Evolventa-Bold.ttf');
+}
+
+@font-face
+{
+    font-family: 'Evolventa';
+    font-weight: oblique;
+    font-style: oblique;
+    src: url('../fonts/Evolventa-Oblique.ttf');
+}
 /*--------------------------------------------------------------
 >> TABLE OF CONTENTS:
 ----------------------------------------------------------------
