--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -62,7 +62,7 @@ body,
 html {
   color: #858585;
   background-color: #151515;
-  font-family: 'Inter', sans-serif;
+  font-family: 'Evolventa', sans-serif;
   font-size: 16px;
   font-weight: 400;
   line-height: 1.6em;
