implemented changes with mobile changes

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -60,7 +60,7 @@
 ----------------------------------------------------------------*/
 body,
 html {
-  color: #858585;
+  color: #b0b0b0;
   background-color: #151515;
   font-family: 'Evolventa', sans-serif;
   font-size: 16px;
@@ -106,6 +106,18 @@ h6 {
     position:absolute;
 
 }
+
+.custom-photo-padding {
+  object-fit: cover;
+  min-height: 550px;
+}
+.hide-on-desktop{
+  display: none;
+}
+.hide-on-mobile{
+  display: block;
+}
+
 
 h1 {
   font-size: 40px; }
@@ -795,7 +807,9 @@ hr {
     .st-site-header.st-style2 .st-btn.st-style1 {
       margin-top: 20px;
       font-size: 14px;
-      padding: 0.6em 1.3em; }
+      padding: 0.6em 1.3em;
+      font-family: 'Evolventa';
+    }
     .st-site-header.st-style2 .st-hero-btn {
       margin-top: 22px; }
     .st-site-header.st-style2 .st-main-header-left {
@@ -810,6 +824,20 @@ hr {
       left: 300px;
       max-width: calc(100% - 300px); } }
 @media screen and (max-width: 991px) {
+  .custom-photo-padding {
+    height: 40vh;
+    object-fit:scale-down;
+    min-height: 0;
+  }
+  .hide-on-mobile{
+    display: none;
+  }
+  .hide-on-desktop{
+    display: block;
+  }
+
+
+
   .st-site-header .st-btn,
   .st-site-header.st-style2 .st-opening-hr,
   .st-site-header.st-style2 .st-social-btn.st-style1 {
@@ -1264,7 +1292,7 @@ canvas {
     left: 50%;
     -webkit-transform: translateX(-50%);
             transform: translateX(-50%);
-    font-size: 90px;
+    font-size: 45px;
     font-weight: 700;
     color: rgba(21, 27, 41, 0.5);
     margin: 0;
@@ -1289,7 +1317,7 @@ canvas {
   font-weight: 400;
   margin-bottom: 18px; }
 .st-text-block.st-style1 .st-text-block-subtitle {
-  font-size: 24px;
+  font-size: 16px;
   font-weight: 300;
   color: #ff5e00;
   margin-bottom: 18px; }
@@ -1368,7 +1396,7 @@ canvas {
 18. Skill
 ----------------------------------------------------------------*/
 .st-skill-title {
-  font-size: 36px;
+  font-size: 28px;
   font-weight: 400;
   margin-bottom: 25px; }
 
@@ -1395,7 +1423,9 @@ canvas {
 
 .st-progressbar-title {
   font-size: 16px;
-  margin-bottom: 0; }
+  margin-bottom: 0; 
+  font-family: 'Evolventa';
+}
 
 .st-progressbar-percentage {
   color: #ff5e00;
